--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --mode=development"
+    "dev": "webpack serve --mode=development",
+    "build": "webpack serve --mode=production"
   },
   "keywords": [],
   "author": "",
