--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.0.1",
