--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": [
     "@babel/preset-env"
+    // './my-babel-preset.js' 커스텀 프리셋
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties"
