--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --progress",
     "watch": "webpack --watch",
     "build": "NODE_ENV=production webpack",
-    "lint": "eslint src --fix",
+    "lint": "eslint ./src --fix",
     "build-dev": "webpack",
     "clean": "rm -rf dist"
   },
