--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,9 @@
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
+  "eslintConfig":{
+    "parser":"babel-eslint"
+  },
   "parserOptions": {
     "ecmaVersion": 11,
     "sourceType": "module"
