--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "webpack serve --progress",
     "watch": "webpack --watch",
     "build": "NODE_ENV=production webpack",
-    "lint": "eslint ./src --fix",
     "build-dev": "webpack",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "prepare": "husky install",
+    "lint-staged":"lint-staged"
   },
-  "husky":{
-    "hooks":{
-      "pre-commit":"echo \"이것은 커밋전에 출력됨\""
-    }
+  "lint-staged":{
+    "**/*.{js}":[
+      "eslint --fix"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +35,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
     "postcss-loader": "^6.2.1",
