--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "webpack serve --progress",
     "watch": "webpack --watch",
     "build": "NODE_ENV=production webpack",
     "build-dev": "webpack",
     "clean": "rm -rf dist",
-    "prepare": "husky install",
-    "lint-staged":"lint-staged"
+    "pre-commit": "lint-staged"
   },
-  "lint-staged":{
-    "**/*.{ts,js}":[
+  "lint-staged": {
+    "**/*.{ts,js}": [
+      "prettier --write",
       "eslint --fix"
+    ],
+    "**/*.{html,scss,json}": [
+      "prettier --write"
     ]
   },
   "author": "",
@@ -31,6 +35,7 @@
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
