--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "webpack serve --progress",
     "watch": "webpack --watch",
     "build": "NODE_ENV=production webpack",
     "build-dev": "webpack",
     "clean": "rm -rf dist",
-    "pre-commit": "echo \"이게 커밋전에 동작함.\""
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "**/*.{ts,js}": [
